minikube/keycloak-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: keycloak
  name: keycloak
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: keycloak
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.network/qunicorn-core-qunicorn: "true"
        io.kompose.service: keycloak
    spec:
      containers:
        - env:
            - name: DB_ADDR
              value: keycloak_postgres
            - name: DB_PASSWORD
              value: passwd
            - name: DB_USER
              value: postgres
            - name: DB_VENDOR
              value: postgres
            - name: KEYCLOAK_PASSWORD
              value: kc_pass
            - name: KEYCLOAK_USER
              value: kc_user
          image: jboss/keycloak
          name: keycloak
          ports:
            - containerPort: 8080
              hostPort: 8081
              protocol: TCP
          resources: { }
          volumeMounts:
            - mountPath: /tmp/realm-export.json
              name: keycloak-claim0
      restartPolicy: Always
      volumes:
        - name: keycloak-claim0
          persistentVolumeClaim:
            claimName: keycloak-claim0
status: { }
