minikube/keycloak-postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: keycloak-postgres
  name: keycloak-postgres
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: keycloak-postgres
  strategy: { }
  template:
    metadata:
      labels:
        io.kompose.network/qunicorn-core-qunicorn: "true"
        io.kompose.service: keycloak-postgres
    spec:
      containers:
        - env:
            - name: PGDATA
              value: /var/lib/postgresql/data/pgdata
            - name: POSTGRES_DB
              value: keycloak
            - name: POSTGRES_PASSWORD
              value: passwd
          image: postgres:15.3
          name: keycloak-postgres
          resources: { }
      restartPolicy: Always
status: { }
