minikube/postgres-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    io.kompose.service: postgres
  name: postgres
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: postgres
  template:
    metadata:
      labels:
        io.kompose.network/qunicorn-core-qunicorn: "true"
        io.kompose.service: postgres
    spec:
      containers:
        - env:
            - name: PGDATA
              value: /var/lib/postgresql/data/pgdata
            - name: POSTGRES_DB
              value: qunicorn
            - name: POSTGRES_PASSWORD
              value: passwd
          image: postgres:15.3
          name: postgres
          ports:
            - containerPort: 5432
              #hostPort: 5432
              protocol: TCP
      restartPolicy: Always
