minikube/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: server
  name: server
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: server
  template:
    metadata:
      labels:
        io.kompose.network/qunicorn-core-qunicorn: "true"
        io.kompose.service: server
    spec:
      containers:
        - env:
            - name: CONTAINER_MODE
              value: server
            - name: BROKER_HOST
              value: broker
            - name: BROKER_PORT
              value: "6379"
            - name: BROKER_URL
              value: "redis://:$(BROKER_PASSWORD)@$(BROKER_HOST):$(BROKER_PORT)"
            - name: JWKS_URL
              value: http://keycloak:8081/auth/realms/qunicorn/protocol/openid-connect/certs
            - name: DB_URL
              value: postgresql+psycopg://postgres:passwd@postgres/qunicorn
            - name: SERVER_PORT
              value: "8081"
            - name: NUMBA_CACHE_DIR
              value: /app/cache
            - name: QMWARE_API_KEY
              valueFrom:
                secretKeyRef:
                  name: qmware-secret
                  key: QMWARE_API_KEY
            - name: QMWARE_API_KEY_ID
              valueFrom:
                secretKeyRef:
                  name: qmware-secret
                  key: QMWARE_API_KEY_ID
            # the URL of the QMware API is to be set here
            # - name: QMWARE_URL
            #   value: ???
          image: ghcr.io/qunicorn/qunicorn-core:main
          name: server
          ports:
            - containerPort: 8081
              hostPort: 8081
              protocol: TCP
      restartPolicy: Always
