minikube/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: worker
  name: worker
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: worker
  template:
    metadata:
      labels:
        io.kompose.network/qunicorn-core-qunicorn: "true"
        io.kompose.service: worker
    spec:
      containers:
        - env:
            - name: BROKER_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: broker-secret
                  key: password
            - name: BROKER_HOST
              value: broker
            - name: BROKER_PORT
              value: "6379"
            - name: BROKER_URL
              value: "redis://:$(BROKER_PASSWORD)@$(BROKER_HOST):$(BROKER_PORT)"
            - name: CONTAINER_MODE
              value: worker
            - name: DB_URL
              value: postgresql+psycopg://postgres:passwd@postgres/qunicorn
            - name: NUMBA_CACHE_DIR
              value: /app/cache
            - name: QMWARE_API_KEY
              valueFrom:
                secretKeyRef:
                  name: qmware-secret
                  key: QMWARE_API_KEY
            - name: QMWARE_API_KEY_ID
              valueFrom:
                secretKeyRef:
                  name: qmware-secret
                  key: QMWARE_API_KEY_ID
            # the URL of the QMware API is to be set here
            # - name: QMWARE_URL
            #   value: ???
          image: ghcr.io/qunicorn/qunicorn-core:main
          name: worker
          ports:
            - containerPort: 6379
              protocol: TCP
      restartPolicy: Always
