minikube/keycloak-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-postgres
  labels:
    app: postgres
spec:
  ports:
    - port: 5432
      name: postgres
  selector:
    app: postgres
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-postgres
spec:
  selector:
    matchLabels:
      app: postgres
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - image: postgres:15.3
          name: postgres
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - name: keycloak-pgdata
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: keycloak-pgdata
          persistentVolumeClaim:
            claimName: postgres-pvc
