minikube/keycloak-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: keycloak
  name: keycloak
  namespace: default
spec:
  ports:
    - name: "8081"
      port: 8081
      targetPort: 8080
  selector:
    io.kompose.service: keycloak
status:
  loadBalancer: { }
