minikube/keycloak.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  ports:
    - name: http
      port: 8443
      targetPort: 8080
  selector:
    app: keycloak
  type: LoadBalancer

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak
          args: ["start-dev","--import-realm"]
          ports:
            - containerPort: 8080
              #hostPort: 8080
          volumeMounts:
            - name: keycloak-volume
              mountPath: /opt/keycloak/data/import/
      volumes:
        - name: keycloak-volume
          configMap:
            name: keycloak-configmap
