minikube/server-tcp-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: server-tcp
  name: server-tcp
  namespace: default
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    io.kompose.service: server
  type: LoadBalancer
status:
  loadBalancer: { }
