minikube/worker-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: worker
  name: worker
  namespace: default
spec:
  ports:
    - name: "6379"
      port: 6379
      targetPort: 6379
  selector:
    io.kompose.service: worker
