minikube/server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe --file docker-compose.yaml convert --out minikube
    kompose.service.expose: "true"
    kompose.service.type: nodeport
    kompose.version: 1.30.0 (9d8dcb518)
  creationTimestamp: null
  labels:
    io.kompose.service: server
  name: server
  namespace: default
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: server
                port:
                  number: 8080
            path: /
            pathType: Prefix
status:
  loadBalancer: {}
